2001-08-30  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextdisplay.c (render_layout_line): handle NULL shaped
	object from the empty-child-anchor case by drawing a little box.
	
	* gtk/gtktextlayout.c (add_child_attrs): Still set shape attribute
	if the child anchor has no anchored widgets - fixes #59328.

	Also, remove bizarre deletion of preedit string that seems to have
	gotten in here somehow.

2001-08-30  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_check_cursor_blink): apply fix
	to #58420 from Hidetoshi Tajima and Matthias Clasen

Wed Aug 29 17:28:04 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_render):
	change color when the GtkTreeView loses focus.

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render):
	ditto.
	
	* gtk/gtkstyle.c (gtk_default_draw_flat_box): ditto

2001-08-28  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkwindow.c (gtk_window_set_icon_list): fix g_object_notify

2001-08-28  Havoc Pennington  <hp@pobox.com>

	* demos/gtk-demo/main.c (setup_default_icon): add default icon

	* gtk/gtkradiobutton.c (gtk_radio_button_new_with_mnemonic):
	warning fix
	(gtk_radio_button_new_with_label): warning fix

	* gtk/gtkdnd.c: used some random GtkImage private structs, 
	update to reflect GtkImage changes

	* gdk/x11/gdkwindow-x11.c (gdk_window_set_icon_list): don't check
	whether the hint is supported, just always set the icon. A task
	list might want to use it even if the WM doesn't, and the WM may
	change over time. Also, XDeleteProperty() if list == NULL.

	* gtk/gtkwindow.c (gtk_window_set_icon_list)
	(gtk_window_get_icon_list)
	(gtk_window_set_icon)
	(gtk_window_get_icon)
	(gtk_window_set_default_icon_list)
	(gtk_window_get_default_icon_list):
	new functions

	* gtk/gtk-boxed.defs (GtkIconSet): add GtkIconSet

	* gtk/gtkimage.c: Implement property support, bug #59408

	* gtk/gtkcontainer.c (gtk_container_add): make the warning message